cats-api/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cats-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: demo-cats.internal
      http:
        paths:
          - path: /cats-api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: cats-api
                port:
                  number: 8080
          - path: /hello-api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 8080
